# Time-Traveller

./: .gitignore  README.md  certificate.yaml  cloudbuild.yaml  deployment.yaml  frontendconfig.yaml  ingress.yaml  service.yaml
.github/workflows/: gke-deploy.yaml
auth/: Dockerfile  README.md  app.js  package-lock.json  package.json
backend/WebAssembly/: install_dependencies.sh
backend/auth/: app.js  package-lock.json  package.json
backend/forecast_module/: .gitignore  README.md  requirements.txt
backend/forecast_module/app/: main.py
backend/forecast_module/app/api/: detail.py  forecast.py  redis.py
backend/forecast_module/app/models/: detail.py  forecast.py
backend/forecast_module/app/utils/: combination.py  ets.py  mapa.py  price_close.py  price_open.py  prophet_module.py  sarima.py
forecast_module/: Dockerfile  README.md  requirements.txt
forecast_module/app/: main.py
forecast_module/app/api/: forecast.py
forecast_module/app/models/: error.py  forecast.py
forecast_module/app/utils/: combination.py  ets.py  price_open.py
forecast_module/tests/: tests.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/WebAssembly/: Makefile  README.md  average.c
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js
frontend/src/components/: AuthModal.jsx  CookieBanner.jsx  Plot.jsx  Sidebar.jsx  Spinner.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/rust/: Cargo.toml  README.md  lib.rs  manage-rust.sh
