[package]
name = "add-two-numbers"
edition = "2021"
description = "WASM module to add two numbers using Rust and wasm-bindgen"
license = "MIT"
repository = "https://github.com/your-org/add-two-numbers"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.92"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]